admin button overlap fix

--- a/views/style/admin.css
+++ b/views/style/admin.css
@@ -62,35 +62,6 @@
   }
 }
 
-  /*button overlap fix*/
-  .msgadmin, .home-button1, .moremsg, .prevtrans, .addwallet {
-    width: 90%;
-    height: auto; 
-    position: relative; 
-    margin: 20px auto;
-    padding: 10px 0;
-    border-radius: 8px;
-    background-color: #3578ab;
-    color: #ffffff; 
-    text-align: center; 
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
-    cursor: pointer; 
-    border: none; 
-  }
-  
-  
-  .RightBox, .LeftBox {
-    position: relative; 
-    padding-bottom: 80px; 
-  }
-  
-  .RightBox .msgadmin, .LeftBox .home-button1 {
-    position: absolute;
-    bottom: 20px; 
-    left: 50%;
-    transform: translateX(-50%); 
-  }
-
 .main {
   flex: 0 0 auto;
   width: 100%;
@@ -435,21 +406,31 @@
   background-color: rgb(255, 255, 255);
 }
 
-.moremsg {
-  color: #e3e3e3;
-  width: 484px;
-  height: 66px;
-  background-color: #3578ab;
-  margin: 20px;
-  border-radius: 8px;
-}
-.msgadmin {
-  color: #ffffff;
-  width: 355px;
-  height: 66px;
-  margin-top: var(--dl-space-space-oneandhalfunits);
-  border-color: #ffffff;
-  background-color: #3578ab;
-  margin: 20px;
-  border-radius: 8px;
-}
+  /*button overlap fix*/
+  .msgadmin, .home-button1, .moremsg, .prevtrans, .addwallet {
+    width: 90%;
+    height: auto; 
+    position: relative; 
+    margin: 20px auto;
+    padding: 10px 0;
+    border-radius: 8px;
+    background-color: #3578ab;
+    color: #ffffff; 
+    text-align: center; 
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
+    cursor: pointer; 
+    border: none; 
+  }
+  
+  
+  .RightBox, .LeftBox {
+    position: relative; 
+    padding-bottom: 80px; 
+  }
+  
+  .RightBox .msgadmin, .LeftBox .home-button1 {
+    position: absolute;
+    bottom: 20px; 
+    left: 50%;
+    transform: translateX(-50%); 
+  }
